Were able to fix github

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-WP_API_URL=http://noroff-explore.flywheelsites.com/graphql/
+WP_API_DOMAIN=noroff-explore.flywheelsites.com
+WP_API_ACCESS_NAME=flywheel
+WP_API_ACCESS_SECRET=kw8zv8b85vj7gju2
